--- a/test/templates/stradivari_posts.haml
+++ b/test/templates/stradivari_posts.haml
@@ -1,4 +1,4 @@
-= table_for @posts, header_visible: true, body_visible: true, footer_visible: true, downloadable: true do
+= table_for @posts, header_visible: true, body_visible: true, footer_visible: false, downloadable: true do
   - column :title, presence: true, html: {:class => "custom th class"}
   - column :body 
   - column :user_id, title: "user_id"
