--- a/test/templates/stradivari_base.haml
+++ b/test/templates/stradivari_base.haml
@@ -1,4 +1,4 @@
-= table_for @foos, header_visible: true, body_visible: true, footer_visible: true, downloadable: true do
+= table_for @foos, header_visible: true, body_visible: true, footer_visible: false, downloadable: true do
   - column :id
   - column :name, presence: true, html: {:class => "custom th class"}
   - column :text_field do |foo|
