--- a/spec/dummy/app/views/welcome/index.html.haml
+++ b/spec/dummy/app/views/welcome/index.html.haml
@@ -1,4 +1,4 @@
-= table_for @foos, header_visible: true, body_visible: true, footer_visible: false, downloadable: :xlsx do
+= table_for @foos, header_visible: true, body_visible: true, footer_visible: true, downloadable: :xlsx do
   - column :id
   -# non posso ancora testare i sortable  - column :name, :sortable => true
   - column :name, presence: true, html: {:class => "custom th class"}
