comments are now in english

--- a/spec/templates/tree.html.haml
+++ b/spec/templates/tree.html.haml
@@ -4,4 +4,4 @@
 
 = select_tree_check_box name: "name"
 
--# non mi funziona il caso con tre parametri= select_tree_check_box "name", "value", true
+-# I wasn't able to test the three parameters case: select_tree_check_box "name", "value", true
