Add context to clear filters

--- a/app/assets/javascripts/stradivari/base.js.erb
+++ b/app/assets/javascripts/stradivari/base.js.erb
@@ -1,6 +1,7 @@
 window.Stradivari = (typeof Stradivari != "undefined") ? Stradivari : {};
 
 $.extend(Stradivari, {
+  filterContext:   "<%= Stradivari::Filter::CONTEXT %>",
   filterNamespace: "<%= Stradivari::Filter::NAMESPACE %>",
   version:         "<%= Stradivari::VERSION %>",
 
